--- a/angular.json
+++ b/angular.json
@@ -97,6 +97,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
+              "node_modules/owl.carousel/dist/assets/owl.carousel.css",
+              "node_modules/owl.carousel/dist/assets/owl.theme.default.css",
               "src/styles.css"
             ],
             "scripts": []
