--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^18.2.0",
     "bootstrap": "^5.3.3",
     "ngx-owl-carousel-o": "^18.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.12",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.14",
     "tslib": "^2.3.0",
