--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "bootstrap": "^5.3.3",
+    "ngx-image-cropper": "^9.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.12",
