--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rxjs": "~7.8.0",
     "swiper": "^11.1.14",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.3",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@angular/cli": "^18.2.11",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
