--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,7 @@
               }
             ],
             "styles": [
+              "./node_modules/angular-calendar/css/angular-calendar.css",
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css",
               "src/colors.css"
