--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "angular-calendar": "^0.31.1",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "ngx-image-cropper": "^9.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
     "primeicons": "^7.0.0",
