--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "angular-calendar": "^0.31.1",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "ngx-image-cropper": "^9.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
     "primeicons": "^7.0.0",
