--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jwt-decode": "^4.0.0",
     "ngx-image-cropper": "^9.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
     "primeicons": "^7.0.0",
@@ -41,6 +42,7 @@
     "@angular/cli": "^18.2.11",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
