--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@stomp/stompjs": "^7.0.0",
     "angular-calendar": "^0.31.1",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
@@ -32,6 +33,8 @@
     "primeicons": "^7.0.0",
     "primeng": "^17.18.12",
     "rxjs": "~7.8.0",
+    "sockjs": "^0.3.24",
+    "sockjs-client": "^1.6.1",
     "swiper": "^11.1.14",
     "tslib": "^2.3.0",
     "uuid": "^11.0.3",
@@ -43,6 +46,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/jwt-decode": "^3.1.0",
+    "@types/sockjs-client": "^1.5.4",
     "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
