--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@stomp/stompjs": "^7.0.0",
     "angular-calendar": "^0.31.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.5.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
