[ADD] - Add init test files

--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
+    "jquery": "^3.7.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
     "ngx-image-cropper": "^9.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
+    "owl.carousel": "^2.3.4",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.12",
     "rxjs": "~7.8.0",
