--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "ngx-image-cropper": "^9.0.0",
     "ngx-owl-carousel-o": "^18.0.0",
     "owl.carousel": "^2.3.4",
@@ -51,6 +52,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/jwt-decode": "^3.1.0",
+    "@types/leaflet": "^1.9.20",
     "@types/sockjs-client": "^1.5.4",
     "@types/uuid": "^10.0.0",
     "jasmine-core": "~5.2.0",
